// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render card 1`] = `
<div
  className="sc-AxhCb jzzHgf"
>
  <div
    className="sc-AxgMl ftqCsy"
  >
    
  </div>
</div>
`;

exports[`Card should render card with children 1`] = `
<div
  className="sc-AxhCb jzzHgf"
>
  <div
    className="sc-AxgMl ftqCsy"
  >
    Children textual content
  </div>
</div>
`;

exports[`Card should render card with icon 1`] = `
<div
  className="sc-AxhCb jzzHgf"
>
  <span
    className="sc-AxheI gIILAo sc-AxjAm jWlVxK lni lni-users"
  />
  <h3
    className="sc-AxhUy eFvCNw"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      Users
    </div>
  </h3>
  <div
    className="sc-AxgMl ftqCsy"
  >
    
  </div>
</div>
`;

exports[`Card should render card with icon and children 1`] = `
<div
  className="sc-AxhCb jzzHgf"
>
  <span
    className="sc-AxheI gIILAo sc-AxjAm jWlVxK lni lni-users"
  />
  <h3
    className="sc-AxhUy eFvCNw"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      Users
    </div>
  </h3>
  <div
    className="sc-AxgMl ftqCsy"
  >
    Children textual content
  </div>
</div>
`;
